--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "alius/brickx-order",
+    "name": "aliusenergy/brickx-order",
     "description": "adds custom order fields to extension attributes",
     "license": "proprietary",
     "authors": [
