--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,11 @@
         "files": [
             "registration.php"
         ]
-    }
+    },
+    "repositories": [
+        {
+          "type": "composer",
+          "url": "https://repo.magento.com/"
+        }
+    ]
 }
